# FastAPI-Flask-Comparison

./: .gitignore  README.md  pyproject.toml
common/: exceptions.py  types.py  utils.py
fastapi_example/: main.py  models.py
flask_example/: main.py  models.py
